corpus/fspace.txt
==================
fspace statements
==================

fspace point {
  x : int2d
}

fspace edge(r : region(point)) {
  left: ptr(point, r)
}


---

(program
  (fspace
    (name)
    (fspace_field (name) (regent_primitive_type))
  )
  (fspace
    (name)
    (fspace_argument
      (name)
      (region_type (type_identifier))
    )
    (fspace_field
      (name)
      (ptr_type
        (type_identifier)
        (region_field_identifier (identifier))
      )
    )
  )
)
