corpus/partition.txt
==================
Partition expressions
==================

partition(equal, r, color_space)
partition(r.color, coloring)

---

(program
  (expression
    (partition (identifier) (identifier))
  )
  (expression
    (partition (identifier) (property_identifier) (identifier))
  )
)

==================
Image expressions
==================

image(parent_region, source_partition, data_region.field)

---

(program
  (expression
    (image (identifier) (identifier) (identifier) (property_identifier))
  )
)

==================
Preimage expressions
==================

preimage(parent_region, target_partition, data_region.field)

---

(program
  (expression
    (preimage (identifier) (identifier) (identifier) (property_identifier))
  )
)
